; ModuleID = '/home/carl/AnghaBench/kphp-kdb/mc-proxy/extr_mc-proxy-merge-extension.c_generate_preget_query.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/mc-proxy/extr_mc-proxy-merge-extension.c_generate_preget_query.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mc_proxy_merge_functions = type { i32 (i8*, i8*, i32, i8*, i32)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @generate_preget_query(i8* %0, i8* %1, i32 %2, i8* %3, i32 %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca %struct.mc_proxy_merge_functions*, align 8
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  store i32 %4, i32* %10, align 4
  %12 = call %struct.mc_proxy_merge_functions* (...) @get_extension_functions()
  store %struct.mc_proxy_merge_functions* %12, %struct.mc_proxy_merge_functions** %11, align 8
  %13 = load %struct.mc_proxy_merge_functions*, %struct.mc_proxy_merge_functions** %11, align 8
  %14 = getelementptr inbounds %struct.mc_proxy_merge_functions, %struct.mc_proxy_merge_functions* %13, i32 0, i32 0
  %15 = load i32 (i8*, i8*, i32, i8*, i32)*, i32 (i8*, i8*, i32, i8*, i32)** %14, align 8
  %16 = load i8*, i8** %6, align 8
  %17 = load i8*, i8** %7, align 8
  %18 = load i32, i32* %8, align 4
  %19 = load i8*, i8** %9, align 8
  %20 = load i32, i32* %10, align 4
  %21 = call i32 %15(i8* %16, i8* %17, i32 %18, i8* %19, i32 %20)
  ret i32 %21
}

declare dso_local %struct.mc_proxy_merge_functions* @get_extension_functions(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
